re-formatted to google java style and updated copyright to 2019 (#1480)